# gtest-note

./: .clang-format  .gitignore  CMakeLists.txt  README.md
gtest/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
gtest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
gtest/src/: gtest-assertion-result.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
include/: common.h  json.hpp  util.h
src/: openmp.cpp  read_json.cpp  rtsp_monitor_decoder.h  string_concatenation.cpp  test.cpp
src/auto_ptr/: unique_ptr.cpp  weak_ptr.cpp
src/explicit/: explicit.cpp
src/json/: read_json.cpp
src/small_algorithm/: string_concatenation.cpp
src/thread/: openmp.cpp  thread.cpp
